--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -32,9 +32,8 @@
 						<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
 							<div class="login-option">
 								<a class="cs-color cs-popup-joinus-btn login-popup" data-target="#sign-in" data-toggle="modal" href="#user-register">Login </a> <span >/</span>
-                                    <span><a href="{% url 'registerUser' %}" class="cs-color cs-popup-joinus-btn login-popup ml-0">Register</a></span><a class="get-start-btn" href="register-restaurant.html">
-									Register
-									Restaurant </a>
+                                    <span><a href="{% url 'registerUser' %}" class="cs-color cs-popup-joinus-btn login-popup ml-0">Register</a></span>
+									<a class="get-start-btn" href="{% url 'registerVendor' %}"> Register Restaurant </a>
 							</div>
 						</div>
 					</div>
