--- a/foodOnline_main/static/css/custom.css
+++ b/foodOnline_main/static/css/custom.css
@@ -1,4 +1,4 @@
-/* @keyframes show-toast{
+@keyframes show-toast{
     0% {bottom: -100%}
     20% {bottom: 100px}
     80% {bottom: 100px}
@@ -10,6 +10,5 @@
     bottom: 100%;
     right: 20px;
     animation-name: show-toast;
-    animation-duration: 8s;
-
-} */
+    animation-duration: 7s;
+}
