--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,9 @@
 	<script src="{% static 'js/modernizr.js' %}"></script>
 	<script src="{% static 'js/bootstrap.js' %}"></script>
 
+	
+	<script src="{% static 'js/custom.js' %}"></script>
+
 	<style>
 		body, .main-section p, .mce-content-body p{
 			font:Normal  14px/24px "Open Sans", sans-serif;letter-spacing: 0px;text-transform: none;color: #515151 !important;
