--- a/templates/marketplace/vendor_detail.html
+++ b/templates/marketplace/vendor_detail.html
@@ -122,8 +122,10 @@
                                                 </div>
                                                 <div class="price-holder">
                                                     <span class="price">${{food.price}} </span>
-                                                    <a href="#" class="restaurant-add-menu-btn"><i class="icon-plus4 text-color"></i></a>
-                                                    <span id="add-menu-loader-10"></span>
+                                                    <a href="#" class="decrease_cart" style="margin-right: 28px; font-weight: bold;"><i class="icon-minus text-color"></i></a>
+                                                    <lable id="qty"> 0 </lable>
+                                                    <a href="#" class="add_to_cart" data-id="{{ food.id }}" data-url="{% url 'add_to_cart' food.id %}"><i class="icon-plus4 text-color"></i></a>
+                                                    
                                                 </div>
                                             </li>
                                             {% endfor %}
