--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -31,6 +31,13 @@
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
 							<div class="login-option">
+
+								<a href="">
+									<i class="fa fa-shopping-cart text-danger" style="font-size: 25px;"></i>
+									<span class="badge badge-warning" id="cart_counter" style="border-radius: 50px; position: relative; bottom: 15px; left: -5px;" >{{cart_count}}</span>
+								</a>
+
+
 								<a href="{% url 'marketplace' %}" class="btn btn-outline-danger text-uppercase">Marketplace</a>
 								{% if user.is_authenticated %}
 								<a class="cs-color cs-popup-joinus-btn login-popup" href="{% url 'myAccount' %}">My Account</a>
