--- a/templates/marketplace/vendor_detail.html
+++ b/templates/marketplace/vendor_detail.html
@@ -122,8 +122,8 @@
                                                 </div>
                                                 <div class="price-holder">
                                                     <span class="price">${{food.price}} </span>
-                                                    <a href="#" class="decrease_cart" style="margin-right: 28px; font-weight: bold;"><i class="icon-minus text-color"></i></a>
-                                                    <lable id="qty"> 0 </lable>
+                                                    <a href="#" class="decrease_cart" data-id="{{ food.id }}" data-url="{% url 'decrease_cart' food.id %}"style="margin-right: 28px; font-weight: bold;"><i class="icon-minus text-color"></i></a>
+                                                    <lable id="qty-{{food.id}}"> 0 </lable>
                                                     <a href="#" class="add_to_cart" data-id="{{ food.id }}" data-url="{% url 'add_to_cart' food.id %}"><i class="icon-plus4 text-color"></i></a>
                                                     
                                                 </div>
@@ -133,6 +133,16 @@
                                         </ul>
                                         {% endfor %}
                                     </div>
+
+                                    
+                                    {% for item in cart_items %}
+
+                                        <span id="qty-{{item.fooditem.id}}" class="item_qty" data-qty="{{ item.quantity }}"> </span>
+                                        
+                                    {% endfor %}                                       
+
+
+
                                 </div>
                             </div>
                             
